# glicol-wgpu

./: .gitignore  Cargo.toml  README.md  app.js  glicol_editor.js  glicol_editor_bg.wasm  glicol_wgpu.js  glicol_wgpu_bg.wasm  index.html  pack.sh  server.py
src/: audio.rs  code.glicol  input.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  utils.rs  vertex.rs
